# cybergis-toolkit

./: .gitmodules  COPYRIGHT  README.md  release-notes
Drainage-System-Analysis-Research/: README.md
MultiGPUKDE/: LICENSE  README
MultiGPUKDE/src/: Makefile  decompose.c  decompose.h  io.c  kde.cu  multiGPUKDE.c
WaterStreamNet/: execute.sh  run.py  run.sh
gkde/data/: SampleData.csv
gkde/src/: Makefile  Makefile-cuda6.5  io.h  kde.cu  kde.h  multiGPUKDE.c
mapalgebra/: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README.md
mapalgebra/src/: CMakeLists.txt  mapalg-kconvolve.cc  mapalg.cc
mapalgebra/src/utils/: CMakeLists.txt  data.cc  data.h  util.cc  util.h
mapalgebra/test/: decomp.cc  rastercp.cc
pabm/: CMakeLists.txt  INSTALL  LICENSE  Makefile  README  agent.c  env.c  hdr.h  lb.c  main.c  migrate.c  mpi.c  sim.c  sugar.c
pabm/include/: agent.h  sugar.h  util.h
pgap/: LICENSE.TXT  Makefile  README.md  addr.c  addr.h  data.c  data.h  ga.c  ga.h  gsl-sprng.c  gsl-sprng.h  log.c  log.h  myrng.h  mysprng.c  mysprng.h  pga.c  pga.h  randseq.c  randseq.h
ppysal/autoreg/: .autoreg.py.swp  .generateW.py.swp  .submit.sh.swp  argumentparser.py  auto_mpi_PoC.py  autompi.py  autompi_nowrite.py  autoreg.py  generateW.py  magicout.json  out  out.json  pbsout.json  pbsout_summary.txt  pbsout_vectors.csv  submit.sh  testA.json
ppysal/chol/: .cchol.pyx.swo  .cchol.pyx.swp  .cholesky.py.swn  .cholesky.py.swo  .cholesky.py.swp  .pchol.py.swp  Cholesky decomposition timings.ipynb  cchol.c  cchol.html  cchol.pyx  cholesky.py  pchol.py  setup.py  test.f  test.py  testf.f
ppysal/chol/.ipynb_checkpoints/: Untitled0-checkpoint.ipynb
ppysal/cluster/: .hybrid_ifs.py.swo  .ls.py.swo  .mpicluster.py.swp  .out.swp  hybrid_basic.py  hybrid_ifs.py  hybrid_synchronize.py  ifs.py  ifs.py.e3604813  ls.py  out  pscw_pp  pscw_pp.c  rma_test.py  submit_hybrid_basic.py  submit_hybrid_ifs.py  submit_hybrid_synchronize.sh
ppysal/fisher_jenks/: Fisher_Jenks Examples.ipynb  VarianceMatrixFile  VarianceMatrixFile.hdf5  fj_dynamic.py  fj_h5py.py  fj_refactored.py  mp_fj_test.py  ms.py  test_fj.py
ppysal/geoda_cluster/: README.md  cluster_submit  mpi_test1.py  psum.py  scatter_gather.py
ppysal/geoda_cluster/fisher_jenks/: fj_mpi.py  fj_mpi_integrated.py  fj_mpi_submit  fj_vect.py  python_pbs_submit.py
ppysal/kdtree/: kd_parallel.py  mp_distance.py
ppysal/kernelweights/: kerneltest.py
ppysal/listW/: mpiW.py
ppysal/moransi/: localmorans_mp.py  morans_mp.py
ppysal/moransi/CythonMoransI/: README.md  lmorans.py  setup.py  shuffle1d.c  shuffle1d.pyx
ppysal/nearestneighbor/: .adjacentpolygon.py.swp  .globalsort.py.swp  .nn.py.swp  1024.dbf  1024.shp  1024.shx  NearestNeighbor.ipynb  adjacentpolygon.py  globalsort.py  mpi_knn.py  mpi_rtree.py  nn.py
ppysal/nearestneighbor/.ipynb_checkpoints/: NearestNeighbor-checkpoint.ipynb
ppysal/nearestneighbor/pointtests/: Nearest.o3638990  Nearest.o3638991  Nearest.o3638992  Nearest.o3638993  Nearest.o3638994  Nearest.o3638995  Nearest.o3638996  Nearest.o3638997  Nearest.o3638998  Nearest.o3638999  Nearest.o3639000  Nearest.o3639001  Nearest.o3639002  Nearest.o3639003  Nearest.o3639004  Nearest.o3639005  Nearest.o3639006  Nearest.o3639007  Nearest.o3639008  Nearest.o3639009  Nearest.o3639010  Nearest.o3639011  Nearest.o3639012  Nearest.o3639013  Nearest.o3639014  Nearest.o3639015  Nearest.o3639016  Nearest.o3639017  Nearest.o3639018  Nearest.o3639019  Nearest.o3639020  Nearest.o3639021  Nearest.o3639022  Nearest.o3639023  Nearest.o3639024  Nearest.o3639025  Untitled0.ipynb
ppysal/nearestneighbor/test_poly/: 100.dbf  100irr.dbf  100irr.shp  100irr.shx  100pt.dbf  100pt.shp  100pt.shx
ppysal/release/: README.txt  adjacentpolygon.py  fj_refactored_old.py  nn.py  test_fj.py
ppysal/testing/: ReadMe  parse_test1.py  singletest.py  test1.nodelist  test1.sh  test_nodes.py
ppysal/weights/: .contiguity_apply_async.py.swp  10000.shx  10000_poly.shp  100x100.dbf  100x100.shp  100x100.shx  2500_poly.dbf  EvenFasterSerialContiguity.ipynb  Geometries.ipynb  _contW_binning_par.py  bf_tester.py  binning.py  contiguity_apply_async.py  contiguity_bf_jay.py  contiguity_decomp_bf.py  contiguity_decomp_binning.py  contiguity_decomp_binning_mapasync.py  contiguity_joinable_queue.py  contiguity_log.txt  contiguity_managed_dict.py  contiguity_map_async.py  contiguity_serial.py  contiguity_time_tester.sh  decomp_binning.py  density.ipynb  lattice5625.dbf  lattice5625.shp  lattice5625.shx  makeShapeFiles.py  neighbors.py  numpy_weights_silent.py  numpy_weights_verbose.py  parallel_contiguity_tests.py  pbinning.py  plistW.py  plistW.py.lprof  serial_contiguity.py  speed_tests.py  test_data_generator.py  test_weights.sh  (+1 more)
ppysal/weights/.ipynb_checkpoints/: EvenFasterSerialContiguity-checkpoint.ipynb  Speed Comparison-checkpoint.ipynb  (+1 more)
prasterblaster/: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  buildgdal.sh
prasterblaster/src/: configuration.cc  configuration.h  rasterchunk.cc  rasterchunk.h  rastercoordtransformer.cc  rastercoordtransformer.h  reprojection_tools.cc  reprojection_tools.h  resampler.h  std_int.h  utils.h
prasterblaster/src/demos/: prasterblaster-main.cc  prasterblaster-pio.cc  prasterblaster-pio.h  prasterblaster-simple.cc  sptw.cc  sptw.h
prasterblaster/src/gtest/: Makefile.am
prasterblaster/tests/: Makefile.am  check-rastercoordtransformer.cc  check_gdal.cc  check_reprojection_tools.cc  rastercompare.cc  rastercompare.h  systemtest.cc
sptw/: sptw.cc  sptw.h
taudem/: LICENSE.txt
taudem/src/: ConnectDown.cpp  D8HDistToStrm.cpp  D8flowpathextremeup.cpp  DinfAvalanche.cpp  DinfConcLimAccum.cpp  DinfDistDown.cpp  DinfDistUp.cpp  DinfRevAccum.cpp  DinfTransLimAccum.cpp  DinfUpDependence.cpp  DropAnalysis.cpp  LengthArea.cpp  PeukerDouglas.cpp  SinmapSI.cpp  SlopeArea.cpp  SlopeAreaRatio.cpp  SlopeAveDown.cpp  TWI.cpp  Threshold.cpp  aread8.cpp  areadinf.cpp  dinf.cpp  dinfdecayaccum.cpp  flood.cpp  flow_direction.h  gagewatershed.cpp  gridnet.cpp  linearpart.h  partition.h  streamnet.cpp  tiffIO.cpp  tiffIO.h
(+30 files in other folders)
